Fix card-waist alignment

--- a/css/home.css
+++ b/css/home.css
@@ -66,7 +66,7 @@ main {
 .card {
   display: grid;
   grid-template-columns: 250px;
-  grid-template-rows: max-content auto 20px;
+  grid-template-rows: max-content auto 25px;
   width: 100%;
   height: 300px;
   border: 1px solid darkgrey;
@@ -75,7 +75,6 @@ main {
 }
 
 .card-header {
-  background-color: lightpink;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -84,18 +83,18 @@ main {
 }
 
 .card-waist {
-  background-color: darkseagreen;
   width: 90%;
   display: flex;
   justify-self: center;
   justify-content: center;
-  align-items: center;
+  padding-top: 20px;
 }
 
 .card-footer {
-  background-color: khaki;
-  width: 100%;
-  height: 100%;
+  display: flex;
+  font-size: 13px;
+  justify-self: end;
+  padding-right: 20px;
 }
 
 /* Everything about footer */
